# refactor-radar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md
crates/analyzer/: Cargo.toml
crates/analyzer/src/: lib.rs
crates/analyzer/tests/: analysis_fixture.rs
crates/analyzer/tests/fixtures/sample_repo/: package.json  tsconfig.json
crates/analyzer/tests/fixtures/sample_repo/src/core/: config.ts  logger.ts
crates/analyzer/tests/fixtures/sample_repo/src/features/: dashboard.ts
crates/analyzer/tests/fixtures/sample_repo/src/services/: userService.ts
crates/analyzer/tests/fixtures/sample_repo/src/state/: selectors.ts  store.ts
crates/analyzer/tests/fixtures/sample_repo/src/utils/: label.ts  slug.ts
crates/server/: Cargo.toml
crates/server/src/: main.rs
web/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.mjs
web/src/: App.test.tsx  App.tsx  styles.css
web/src/components/charts/: FileMetricsChart.tsx  IssueDistributionChart.tsx  PriorityRankingChart.tsx  SeverityBreakdownChart.tsx
web/src/components/graph/: DependencyGraph.tsx  graphUtils.ts  useForceSimulation.ts
web/src/components/layout/: AnalysisHistory.tsx  AnalysisProgress.tsx  EmptyState.tsx  ExportMenu.tsx  VisualizationTabs.tsx
web/src/lib/: api.ts  export.ts  i18n.ts  types.ts
