[package]
name = "server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
analyzer = { path = "../analyzer" }
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true

